--- a/co_order.html
+++ b/co_order.html
@@ -17,7 +17,7 @@
    <meta charset="utf-8" />
    <link href="co_base.css" rel="stylesheet"  />
    <link href="co_layout1.css" rel="stylesheet"  />
-    <script src="co_order.js" async></script>
+    <script src="compare.js" async></script>
 </head>
 
 <body>
